Added 'Sending..' animation for more responsive view
* When sending a message and takes a while, the UI will show a
  'Sending..' message to indicate that it's working on sending data.
* Reverted API security changes as it bugged sending messages of files
  only.
* Fixed some typos in 'readme.md'.
* Updated 'notes.md'.

--- a/pb_public/css/global.css
+++ b/pb_public/css/global.css
@@ -44,6 +44,8 @@ a:is(*, :hover, :focus, :visited){
 
 	position: sticky;
 	bottom: 0;
+
+	position: relative;
 }
 .channel:is(:focus, *){
 	border: none;
@@ -99,6 +101,25 @@ a:is(*, :hover, :focus, :visited){
 }
 .icon-wrapper:hover{
 	background: #474748;
+}
+.sending{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	position: absolute;
+	left: 45%;
+	right: 45%;
+	bottom: 120%;
+	z-index: 1;
+	
+	width: 10%;
+	height: 25px;
+	border-radius: 18px;
+	
+	background: #5B5B66;
+	color: #efefef;
+	opacity: 0.65;
 }
 
 .d-none{
