Fixed 'Sending..' animation in mobile view.

--- a/pb_public/css/global.css
+++ b/pb_public/css/global.css
@@ -113,7 +113,7 @@ a:is(*, :hover, :focus, :visited){
 	bottom: 120%;
 	z-index: 1;
 	
-	width: 10%;
+	width: 90px;
 	height: 25px;
 	border-radius: 18px;
 	
