--- a/pb_public/css/global.css
+++ b/pb_public/css/global.css
@@ -219,6 +219,12 @@ a:is(*, :hover, :focus, :visited){
 	max-height: 300px;
 	display: block;
 }
+.files_vid{
+	margin-top: 8px;
+	max-width: 100%;
+	max-height: 500px;
+	display: block;
+}
 .date{
 	text-align: right;
 	margin-top: 8px;
